[gd_scene load_steps=27 format=3 uid="uid://d4jnfd2dbgkxf"]

[ext_resource type="PackedScene" uid="uid://b7pwuuganpb67" path="res://actor.tscn" id="1_svqkn"]
[ext_resource type="Script" path="res://enemies/goblin.gd" id="2_p655y"]
[ext_resource type="Texture2D" uid="uid://8mv1jfj31l1t" path="res://sprites/goblin.png" id="3_3cn02"]
[ext_resource type="PackedScene" uid="uid://debwsgpv33grr" path="res://ai_controller.tscn" id="4_uvb7x"]
[ext_resource type="PackedScene" uid="uid://bb8su8y6i3usp" path="res://state_machine/state_machine.tscn" id="5_nw2l3"]
[ext_resource type="PackedScene" uid="uid://5xvug6s4nooh" path="res://state_machine/state.tscn" id="6_os3tr"]
[ext_resource type="Script" path="res://state_machine/states/idle_state.gd" id="7_k213f"]
[ext_resource type="Script" path="res://state_machine/states/blocking_state.gd" id="8_vxt47"]
[ext_resource type="Script" path="res://state_machine/states/stunned_state.gd" id="9_1eqwb"]
[ext_resource type="Script" path="res://state_machine/states/death_state.gd" id="10_tkb8e"]
[ext_resource type="Script" path="res://state_machine/states/leaping_state.gd" id="11_v8eqr"]
[ext_resource type="Script" path="res://state_machine/states/attacking_state.gd" id="12_xy4m5"]
[ext_resource type="PackedScene" uid="uid://c75vdm6pbi2oy" path="res://components/hit_box.tscn" id="13_m5y2e"]

[sub_resource type="Curve2D" id="Curve2D_bhbow"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0)
}
point_count = 1

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_s2ocv"]
radius = 5.0
height = 22.0

[sub_resource type="Animation" id="Animation_60o48"]
resource_name = "attack1"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [11, 12, 13, 14]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"attack"
}]
}

[sub_resource type="Animation" id="Animation_04ojv"]
resource_name = "attack2"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.6, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 7]
}

[sub_resource type="Animation" id="Animation_nje1d"]
resource_name = "being_hit"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [15]
}

[sub_resource type="Animation" id="Animation_tvg82"]
resource_name = "block"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="Animation" id="Animation_6ogaq"]
resource_name = "die"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [15, 16, 17, 18, 19]
}

[sub_resource type="Animation" id="Animation_q4tlc"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_g0u77"]
resource_name = "walk"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 2, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_66mi3"]
_data = {
"attack1": SubResource("Animation_60o48"),
"attack2": SubResource("Animation_04ojv"),
"being_hit": SubResource("Animation_nje1d"),
"block": SubResource("Animation_tvg82"),
"die": SubResource("Animation_6ogaq"),
"idle": SubResource("Animation_q4tlc"),
"walk": SubResource("Animation_g0u77")
}

[sub_resource type="LabelSettings" id="LabelSettings_ovwdp"]
font_size = 8

[sub_resource type="CircleShape2D" id="CircleShape2D_p183m"]
radius = 22.3607

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g24f5"]
size = Vector2(37, 35)

[node name="Goblin" node_paths=PackedStringArray("controller") instance=ExtResource("1_svqkn")]
collision_layer = 6
collision_mask = 6
script = ExtResource("2_p655y")
leap_range = 100
leap_curve = SubResource("Curve2D_bhbow")
attack_frame_time = 0.2
controller = NodePath("AIController")
move_speed = 50

[node name="Shadow" parent="." index="0"]
position = Vector2(0, 4)

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2(0, 3)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_s2ocv")

[node name="Sprite2D" parent="." index="2"]
position = Vector2(0, -11)
texture = ExtResource("3_3cn02")
flip_h = true
hframes = 5
vframes = 4
frame = 13

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D" index="0"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_66mi3")
}
autoplay = "idle"

[node name="AIController" parent="." index="3" node_paths=PackedStringArray("actor") instance=ExtResource("4_uvb7x")]
actor = NodePath("..")

[node name="BlockTimer" type="Timer" parent="." index="4"]
wait_time = 0.3
one_shot = true

[node name="StateStatus" type="Label" parent="." index="5"]
visible = false
offset_left = -20.0
offset_top = 4.0
offset_right = 20.0
offset_bottom = 16.0
text = "dsa"
label_settings = SubResource("LabelSettings_ovwdp")
horizontal_alignment = 1

[node name="AttackCooldown" type="Timer" parent="." index="6"]
wait_time = 3.0
one_shot = true

[node name="AttackMachine" parent="." index="7" node_paths=PackedStringArray("actor", "current_state") instance=ExtResource("5_nw2l3")]
actor = NodePath("..")
current_state = NodePath("IdleState")

[node name="IdleState" parent="AttackMachine" index="0" instance=ExtResource("6_os3tr")]
script = ExtResource("7_k213f")

[node name="BlockingState" parent="AttackMachine" index="1" instance=ExtResource("6_os3tr")]
script = ExtResource("8_vxt47")

[node name="Timer" type="Timer" parent="AttackMachine/BlockingState" index="0"]
wait_time = 0.5
one_shot = true

[node name="StunnedState" parent="AttackMachine" index="2" instance=ExtResource("6_os3tr")]
script = ExtResource("9_1eqwb")

[node name="DeathState" parent="AttackMachine" index="3" instance=ExtResource("6_os3tr")]
script = ExtResource("10_tkb8e")

[node name="LeapingState" parent="AttackMachine" index="4" instance=ExtResource("6_os3tr")]
script = ExtResource("11_v8eqr")

[node name="PrepareTimer" type="Timer" parent="AttackMachine/LeapingState" index="0"]
wait_time = 0.6
one_shot = true

[node name="AttackingState" parent="AttackMachine" index="5" instance=ExtResource("6_os3tr")]
script = ExtResource("12_xy4m5")

[node name="LeapLanding" parent="." index="8" node_paths=PackedStringArray("damage_source") instance=ExtResource("13_m5y2e")]
damage_source = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeapLanding" index="0"]
shape = SubResource("CircleShape2D_p183m")

[node name="Pivot" type="Node2D" parent="." index="9"]

[node name="AttackBox" parent="Pivot" index="0" node_paths=PackedStringArray("damage_source") instance=ExtResource("13_m5y2e")]
damage_source = NodePath("../..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pivot/AttackBox" index="0"]
position = Vector2(24, 0)
shape = SubResource("RectangleShape2D_g24f5")

[node name="HealthBar" parent="." index="10"]
offset_top = 25.0
offset_bottom = 65.0
max_health = 3.0

[connection signal="damaged" from="." to="AttackMachine/IdleState" method="_on_enemy_damaged"]
[connection signal="damaged" from="." to="AttackMachine/BlockingState" method="_on_enemy_damaged"]
[connection signal="leaped" from="." to="AttackMachine/LeapingState" method="_on_enemy_leaped"]
[connection signal="animation_finished" from="Sprite2D/AnimationPlayer" to="AttackMachine/StunnedState" method="_on_animation_player_animation_finished"]
[connection signal="animation_finished" from="Sprite2D/AnimationPlayer" to="AttackMachine/DeathState" method="_on_animation_player_animation_finished"]
[connection signal="animation_finished" from="Sprite2D/AnimationPlayer" to="AttackMachine/AttackingState" method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="BlockTimer" to="." method="_on_block_timer_timeout"]
[connection signal="timeout" from="AttackMachine/BlockingState/Timer" to="AttackMachine/BlockingState" method="_on_timer_timeout"]
